--- a/tp2/app/views/RandomNumberGame/soumet.html
+++ b/tp2/app/views/RandomNumberGame/soumet.html
@@ -11,10 +11,16 @@
 {% endblock %}
 
 {% block footer%}
-    {{ parent() }}
+    
     {% if not win %}
+    	{{ parent() }}
     	<a class="ui teal button" href="RandomNumberGame/propose">
     		Faire une autre proposition
+    	</a>
+    {% else %}
+    	<a href="RandomNumberGame/index" class="ui inverted teal button">
+        <i class="ui plus icon"></i>
+        	Nouvelle partie
     	</a>
     {% endif %}
 {% endblock %}
